// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar/> renders correctly if prop expanded set false 1`] = `
<aside
  className="SidebarStyled-cNuLyA dmLRca"
>
  <div
    className="SidebarBoxStyled-cPLKHs jnvUud"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop expanded set true 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set false 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set true 1`] = `
<aside
  className="SidebarStyled-cNuLyA rhHDn"
>
  <div
    className="SidebarBoxStyled-cPLKHs gxWuIC"
  >
    <button
      className="SidebarToggleStyled-iZPRsl hVORhQ"
      onClick={[Function]}
    >
      <div
        className="ToggleIconStyled-fcajSq gTeJMp"
      >
        <span
          className="fa fa-angle-left IconFontAwesomeStyled-dGckvS ccJleE"
          color=""
          onClick={[Function]}
          rotate={0}
          size="normal"
        />
      </div>
      <div
        className="ToggleContentStyled-hUPJhx coxtcr"
      >
        <div
          className="ToggleTextStyled-iaoXGE ktjbMy"
        >
          Collapse
        </div>
      </div>
    </button>
  </div>
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set true and toggleButtonText set 1`] = `
<aside
  className="SidebarStyled-cNuLyA rhHDn"
>
  <div
    className="SidebarBoxStyled-cPLKHs gxWuIC"
  >
    <button
      className="SidebarToggleStyled-iZPRsl hVORhQ"
      onClick={[Function]}
    >
      <div
        className="ToggleIconStyled-fcajSq gTeJMp"
      >
        <span
          className="fa fa-angle-left IconFontAwesomeStyled-dGckvS ccJleE"
          color=""
          onClick={[Function]}
          rotate={0}
          size="normal"
        />
      </div>
      <div
        className="ToggleContentStyled-hUPJhx coxtcr"
      >
        <div
          className="ToggleTextStyled-iaoXGE ktjbMy"
        >
          test
        </div>
      </div>
    </button>
  </div>
</aside>
`;

exports[`<Sidebar/> renders correctly if prop right set false 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop right set true 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop spread set true 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly with default props 1`] = `
<aside
  className="SidebarStyled-cNuLyA hGRCgd"
>
  <div
    className="SidebarBoxStyled-cPLKHs cxkcZm"
  />
</aside>
`;

exports[`<SidebarRegion/> renders correctly if prop bordered 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy jCwGgr"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop scrollable 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy dqAWnm"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop scrollableMinHeight set 0 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy fyvkV"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop spread 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy laneCa"
/>
`;

exports[`<SidebarRegion/> renders correctly with default props 1`] = `
<div
  className="SidebarRegionStyled-cRwIVy fyvkV"
/>
`;

exports[`<SidebarToggle/> renders correctly if prop toggleButtonText set 1`] = `
<button
  className="SidebarToggleStyled-iZPRsl hVORhQ"
  onClick={[Function]}
>
  <div
    className="ToggleIconStyled-fcajSq dLbraV"
  >
    <span
      className="fa fa-angle-left IconFontAwesomeStyled-dGckvS ccJleE"
      color=""
      onClick={[Function]}
      rotate={0}
      size="normal"
    />
  </div>
  <div
    className="ToggleContentStyled-hUPJhx coxtcr"
  >
    <div
      className="ToggleTextStyled-iaoXGE dCzhpM"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<SidebarToggle/> renders correctly with default props 1`] = `
<button
  className="SidebarToggleStyled-iZPRsl hVORhQ"
  onClick={[Function]}
>
  <div
    className="ToggleIconStyled-fcajSq dLbraV"
  >
    <span
      className="fa fa-angle-left IconFontAwesomeStyled-dGckvS ccJleE"
      color=""
      onClick={[Function]}
      rotate={0}
      size="normal"
    />
  </div>
  <div
    className="ToggleContentStyled-hUPJhx coxtcr"
  >
    <div
      className="ToggleTextStyled-iaoXGE dCzhpM"
    >
      Collapse
    </div>
  </div>
</button>
`;
